	  in an event; FT2 bug emulation for double toneporta now zeroes the
	  parameter of 3xx in the player instead of using a loader hack. This
	  doesn't affect Ultra Tracker toneporta.
	- XMF: toneporta is identical to Ultra Tracker toneporta (slightly
	  affects max.xmf pos 13+, but the notes are out-of-tune either way).
	- Fix time tracking bugs in some complex pattern loop cases.
	Changes by Alice Rowan and ds-sloth:
	- Minor Impulse Tracker loader performance improvements.

4.6.3 (20250511):
	Changes by Alice Rowan:
	- Fix crashes when xmp_set_position is used to set a negative position.
	  Negative positions now correctly return -XMP_ERROR_INVALID.
	- Fix crashes when xmp_set_row is used to set a negative row.
	  Negative positions now correctly return -XMP_ERROR_INVALID.
	- Fix hangs when xmp_prev_position is used on the first position of
	  a sequence which is preceded by an S3M/IT skip marker.
	- Fix out-of-bounds reads when xmp_next_position is used at the end of
	  a 256 position module.
	- Fix hangs when seeking to an end-of-module marker caused by these
	  positions getting assigned a non-existent sequence.
	- Document xmp_set_position/xmp_next_position/xmp_prev_position
	  interactions with xmp_stop_module/xmp_restart_module.
	- Fix stack underflow in Pha Packer loader (CVE-2025-47256).
	- Slight performance improvements for the Oktalyzer and SFX loaders.
	- Fix broken conversion of ProRunner 2.0 pattern data.
	- xmp_set_tempo_factor no longer alters frame time calculation for
	  xmp_get_frame_info. Frame time is now updated to account for the
	  new time factor after calling xmp_scan_module.
	- Fix loading XMs with some types of harmless pattern truncation.
	  See: Jazztiz/ta-da-da-da.xm, Sonic (UK)/phuture.xm, et al.
	- Fix Poly Tracker pattern break hex parameter.
	- Fix Digital Tracker broken instrument finetune.
	- Fix Digital Tracker 2.03 position jump effect for 4 channel DTMs.