@@ -1,0 +1,14 @@
+50 0 0 0 876544 72 0 1024 0 0 255 0
+100 11 0 0 928666 71 0 1024 0 0 255 0
+150 10 0 0 983887 70 0 1024 0 0 255 0
+200 9 0 0 1042392 69 0 1024 0 0 255 0
+250 8 0 0 1104376 68 0 1024 0 0 255 0
+300 7 0 0 1170045 67 0 1024 0 0 255 0
+350 6 0 0 1239620 66 0 1024 0 0 255 0
+400 5 0 0 1313332 65 0 1024 0 0 255 0
+450 4 0 0 1391426 64 0 1024 0 0 255 0
+500 3 0 0 1474165 63 0 1024 0 0 255 0
+550 2 0 0 1561823 62 0 1024 0 0 255 0
+600 1 0 0 1654694 61 0 1024 0 0 255 0
+650 0 0 0 1753088 60 0 1024 0 0 255 0
+700 1 0 0 1753088 60 0 1024 0 2 255 0
