@@ -55,6 +55,7 @@ Stable versions
 	  in an event; FT2 bug emulation for double toneporta now zeroes the
 	  parameter of 3xx in the player instead of using a loader hack.
 	- Fix time tracking bugs in some complex pattern loop cases.
+	- Fix time tracking bugs when Bxx+Dxx jumps within the same position.
 	Changes by Alice Rowan and ds-sloth:
 	- Minor Impulse Tracker loader performance improvements.
 
